# jder_axum

./: .gitignore  .ls-lint.yml  .typos.toml  Cargo.toml  README.md  justfile  rustfmt.toml
.github/: dependabot.yml
__test__/: Cargo.toml
__test__/src/: main.rs
__test__/src/router/: connect_info.rs  host.rs  json.rs  matched_path.rs  mod.rs  nested_path.rs  original_uri.rs  path.rs  query.rs  state.rs
__test__/src/router/multipart/: file.rs  mod.rs
__test__/src/tests/: connect_info.rs  host.rs  json.rs  matched_path.rs  mod.rs  nested_path.rs  original_uri.rs  path.rs  query.rs  state.rs
__test__/src/tests/multipart/: file.rs  mod.rs
package/: CHANGELOG.md  Cargo.toml  README.md
package/src/: lib.rs
package/src/extract/: connect_info.rs  form.rs  json.rs  matched_path.rs  mod.rs  multipart.rs  nested_path.rs  original_uri.rs  path.rs  query.rs  state.rs
package/src/extract/extra/: host.rs  mod.rs  scheme.rs  typed_header.rs
package/src/extract/matched_path/: mod.rs
package/src/extract/matched_path/from_request_parts/: mod.rs  optional.rs
package/src/extract/multipart/: mod.rs  typed.rs
package/src/extract/path/: mod.rs
package/src/extract/path/from_request_parts/: mod.rs  optional.rs
package/src/internal/extract/: connect_info.rs  host.rs  json.rs  matched_path.rs  multipart.rs  nested_path.rs  original_uri.rs  path.rs  query.rs  state.rs
package/src/internal/response/: mod.rs
package/src/internal/response/json/: error.rs  failure.rs  mod.rs  success.rs
package/src/layers/: mod.rs  request_body_limit.rs  request_time_limit.rs
package/src/response/: mod.rs
package/src/response/header/: mod.rs
package/src/response/json/: error.rs  failure.rs  mod.rs  success.rs
package/src/utils/: mod.rs
package/src/utils/extract/: connect_info.rs  host.rs  json.rs  matched_path.rs  mod.rs  multipart.rs  nested_path.rs  original_uri.rs  path.rs  query.rs  state.rs
package/src/utils/response/: error.rs  mod.rs
package/src/utils/response/json/: error.rs  failure.rs  mod.rs  success.rs
tests/: Cargo.toml
tests/src/router/: form.rs  host.rs  matched_path.rs  mod.rs  query.rs  request_body_limit.rs  request_time_limit.rs  scheme.rs
tests/src/router/json/: mod.rs  optional.rs
tests/src/router/multipart/: file.rs  mod.rs
tests/src/router/typed_header/: mod.rs  optional.rs
tests/src/tests/: connect_info.rs  form.rs  header.rs  matched_path.rs  mod.rs  nested_path.rs  query.rs  request_body_limit.rs  request_time_limit.rs  scheme.rs
tests/src/tests/json/: mod.rs  optional.rs
tests/src/tests/multipart/: file.rs  mod.rs
tests/src/tests/typed_header/: mod.rs  optional.rs
