[workspace]
resolver = "2"
members = [
    "package",
    "tests",
]

[workspace.dependencies]
axum = { version = "~0.8.3", default-features = false, features = ["macros"] }
axum_typed_multipart =  "~0.16.0"
headers = "~0.4.0"
jder_axum = { path = "./package", features = ["all"] }
serde = { version = "^1", features = ["derive"] }
tokio = "^1.40.0"
