[package]
name = "jder_axum"
version = "0.5.0"
authors = ["Alpheus Tang"]
edition = "2024"
rust-version = "1.85.0"
description = """
A response builder for axum
"""
readme = "README.md"
homepage = "https://github.com/alpheustangs/jder_axum"
repository = "https://github.com/alpheustangs/jder_axum"
license = "MIT"
keywords = [
    "jder",
    "axum",
    "json",
    "response",
    "util",
]
categories = [
    "parser-implementations",
    "web-programming",
]
include = [
    "src/*", 
    "Cargo.toml",
    "README.md",
]

[package.metadata.docs.rs]
features = ["all"]

[lib]
name = "jder_axum"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
axum-core = "~0.5.2"
axum-extra ={ version = "~0.10.1", optional = true }
axum_typed_multipart = { workspace = true, optional = true }
bytes = { version = "^1.0.0", optional = true }
headers = { version = "*", optional = true }
serde = { workspace = true }
serde_json = "^1.0.0"
serde_urlencoded = { version = "~0.7.0", optional = true }
utoipa = { version = "^5.0.0", optional = true }

[features]
default = [
    "form",
    "json",
    "matched-path",
    "query",
    "tokio",
]
form = ["dep:serde_urlencoded"]
json = ["dep:bytes"]
matched_path = []
matched-path = ["matched_path"]
multipart = []
typed_multipart = [
    "multipart",
    "dep:axum_typed_multipart",
]
typed-multipart = ["typed_multipart"]
query = []
tokio = []
extra = ["dep:axum-extra"]
extra_typed_header = [
    "extra",
    "axum-extra/typed-header",
    "dep:headers",
]
extra-typed-header = ["extra_typed_header"]
utoipa = ["dep:utoipa"]
all = [
    "form",
    "json",
    "matched-path",
    "multipart",
    "typed-multipart",
    "query",
    "tokio",
    "extra",
    "extra_typed_header",
    "utoipa",
]
