[package]
name = "tests"
edition = "2024"
publish = false

[dependencies]
axum = { workspace = true }
axum-test = "^17.2.0"
axum_typed_multipart = { workspace = true }
headers = { workspace = true }
jder_axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
